--- a/css/estilos.css
+++ b/css/estilos.css
@@ -120,20 +120,237 @@ header {
   box-shadow: none;
 }
 
-.cont_portada {
-  z-index: 1;
-  left: 80px;
-  top: 380px;
+/* Fin de Header */
+/* Inicio de main */
+.cont_gen_principal {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: auto;
 }
-.cont_portada .txt_descripcion {
+.cont_gen_principal .cont_img_prin {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+.cont_gen_principal .cont_portada {
+  z-index: 1;
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+.cont_gen_principal .cont_portada .txt_descripcion {
   font-family: "Montserrat-Regular";
   font-size: 1.875rem;
   margin-bottom: 0;
   color: #FBEED9;
 }
+.cont_gen_principal .cont_portada h1 {
+  padding: 16rem 0rem 3rem 3rem;
+}
+.cont_gen_principal .cont_portada p {
+  padding: 0rem 0rem 3rem 3rem;
+}
+.cont_gen_principal .cont_portada .btn_desk {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 14rem;
+  height: 4.2rem;
+  border: 1px solid #fbeed9;
+  padding: 21px;
+  border-radius: 40px;
+  text-align: center;
+  flex-direction: row;
+  text-decoration: none;
+  margin-left: 3rem;
+}
+.cont_gen_principal .cont_portada .text_Desk {
+  color: #fbeed9;
+  font-size: 18px;
+  font-family: "Montserrat-Regular";
+  font-weight: bold;
+}
+.cont_gen_principal .cont_portada .img_descarga {
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-left: 8px;
+}
 
-h1.pdd_bottom {
-  padding-bottom: 36px;
+/* Pag Nosotros */
+.cont_gen_nos {
+  width: 100%;
+  padding: 2.5rem 3%;
+  min-width: 360px;
+  /* Aplicando Grid */
+}
+.cont_gen_nos h2 {
+  font-family: "Vollkorn-Regular";
+  font-size: 2.2rem;
+  text-align: center;
+  color: #F1BF7B;
+  margin-top: 5rem;
+}
+.cont_gen_nos .cont_nosotros {
+  width: 100%;
+  height: 100%;
+  padding: 1rem 22%;
+  /* Agregando grillas */
+  display: grid;
+  gap: 0;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: "card_1 card_2";
+}
+.cont_gen_nos .cont_nosotros .card_nos {
+  height: 500px;
+  background-color: #f2f2f2;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
+}
+.cont_gen_nos .cont_nosotros .card_nos p, .cont_gen_nos .cont_nosotros .card_nos span {
+  display: block;
+  padding-top: 10px;
+}
+.cont_gen_nos .cont_nosotros .card_1 {
+  background-image: url("/img/pres_1a.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  width: 100%;
+  object-fit: cover;
+  grid-area: card_1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.cont_gen_nos .cont_nosotros .card_1 p {
+  padding: 30px;
+  margin: 0 auto;
+}
+.cont_gen_nos .cont_nosotros .card_2 {
+  grid-area: card_2;
+}
+.cont_gen_nos .cont_nosotros .card_2 img {
+  background-size: cover;
+}
+.cont_gen_nos .cont_nosotros .card_2 .card_img1 {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Fin de pag Nosotros */
+/* Fin de main */
+/* Pag Contactanos */
+.content_contactanos {
+  padding: 2rem 1.5rem 2rem 1.5rem;
+}
+
+#contactanos input,
+#contactanos textarea {
+  color: #262626;
+  background-color: #FBEED9;
+  border: 1px solid #F1BF7B;
+  box-shadow: none;
+  font-weight: inherit;
+}
+
+textarea {
+  resize: none;
+}
+
+fieldset {
+  min-width: 0;
+  padding: 0;
+  margin: 0;
+  border: 1;
+}
+
+/* Fin de pag Contactanos */
+/*  Footer */
+footer {
+  background-color: #262626;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.45);
+}
+
+.pie_pag {
+  width: 100vw;
+  padding: 4rem 3%;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  gap: 2%;
+  display: flex;
+}
+.pie_pag ul {
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 0;
+}
+.pie_pag ul .link_secc a {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+}
+
+/* Contenido 1 pie pag */
+.cont1_pie {
+  margin-bottom: 1rem;
+  width: 28%;
+  display: flex;
+  flex-direction: column;
+}
+.cont1_pie .logo_footer {
+  position: relative;
+  width: 11.5rem;
+}
+.cont1_pie .mg_btm_pie, .cont1_pie h2 {
+  margin-bottom: 2rem;
+}
+.cont1_pie .link_secc a, .cont1_pie .text_gen_pie {
+  padding: 10px 0;
+  color: #F1BF7B;
+  font-size: 1rem;
+}
+
+.cont2_pie {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 58%;
+  gap: 2%;
+  display: flex;
+}
+.cont2_pie #cont_pie_nosotros {
+  width: 17%;
+}
+.cont2_pie .cont_pie_selec {
+  margin-bottom: 2rem;
+  width: 28%;
+}
+.cont2_pie .cont_pie_selec h2 {
+  font-family: "Vollkorn-Regular";
+  color: #F1BF7B;
+  font-size: 1.3rem;
+  font-weight: normal;
+}
+.cont2_pie .link_secc a, .cont2_pie .text_gen_pie {
+  padding: 10px 0;
+  color: #F1BF7B;
+  font-size: 1rem;
+  text-decoration: none;
+}
+.cont2_pie .icn {
+  width: 32px;
+  height: 32px;
+  margin-right: 5px;
+  background-repeat: no-repeat;
+  flex: none;
+}
+.cont2_pie .icn.bi_mail {
+  background-image: url("../img/mail.svg");
+}
+.cont2_pie .icn.bi_wht {
+  background-image: url("../img/whatsapp.svg");
+}
+.cont2_pie .icn.bi_fb {
+  background-image: url("../img/facebook.svg");
+}
+.cont2_pie .icn.bi_ig {
+  background-image: url("../img/Instagram.svg");
 }
 
 .active {
@@ -152,6 +369,74 @@ h1.pdd_bottom {
   display: block;
 }
 
+/* media Q menu mobile  */
+@media (max-width: 1360px) and (min-width: 360px) {
+  .navegacion {
+    height: 5.375rem;
+    padding: 0 2rem 0 2.8rem;
+  }
+}
+@media (max-width: 1266px) and (min-width: 360px) {
+  .class_logo {
+    width: 11.5625rem;
+    object-fit: cover;
+  }
+}
+@media (max-width: 800px) {
+  .nav__cont {
+    width: 70%;
+  }
+}
+@media (max-width: 1360px) {
+  .iconos_header, .nav__cont {
+    display: none;
+  }
+  .navegacion label {
+    display: block;
+    width: 3rem;
+    height: 3rem;
+    text-align: center;
+    padding: 0.5rem;
+  }
+  #check_menu:checked ~ .nav__cont {
+    display: flex;
+    background: #262626;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 96px;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    padding: 2rem 3rem;
+  }
+}
+@media (max-width: 1320px) {
+  #img_principal {
+    height: 55rem;
+    background-size: cover;
+  }
+}
+@media (max-width: 800px) {
+  #txt_enunciado {
+    top: 444px;
+    left: 55px;
+    margin-right: 50px;
+  }
+  .txt_enun {
+    font-size: 2.5rem;
+  }
+  .txt_descripcion {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 1360px) {
+  #img_principal {
+    background-position-x: center;
+    background-position-y: 0rem;
+  }
+}
 @media (width < 1020px) {
   .cont_nosotros {
     padding: 1rem 7rem;
@@ -169,6 +454,44 @@ h1.pdd_bottom {
   .cont_nosotros {
     padding: 1rem 3rem;
     font-size: 0.875rem;
+  }
+}
+@media (max-width: 1660px) {
+  .pie_pag {
+    padding: 4rem 4%;
+  }
+}
+@media (max-width: 1320px) {
+  .pie_pag {
+    padding: 4rem 8%;
+  }
+  .cont1_pie {
+    order: 2;
+    width: 100%;
+  }
+  .cont2_pie {
+    order: 1;
+    width: 100%;
+  }
+}
+@media (max-width: 400px) {
+  .pie_pag {
+    padding: 3rem 15%;
+  }
+}
+@media (max-width: 768px) and (min-width: 360px) {
+  .cont1_pie {
+    width: 100%;
+    order: 2;
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 768px) and (min-width: 360px) {
+  .cont2_pie {
+    order: 1;
+  }
+  .cont2_pie, .cont2_pie #cont_pie_nosotros, .cont_pie_selec {
+    width: 100%;
   }
 }
 
