--- a/scss/partials/_general.scss
+++ b/scss/partials/_general.scss
@@ -104,22 +104,269 @@ header{
         box-shadow: none;
     }
 }
+/* Fin de Header */
 
-.cont_portada{
+/* Inicio de main */
+.cont_gen_principal{
+    display: grid;grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: auto;
 
-    z-index: 1;
-    left: $w-px * 8;
-    top: $w-px * 38;  
+    .cont_img_prin{
+        grid-column: 1/3;
+        grid-row: 1/3;
+    }
 
-    .txt_descripcion {
-        font-family: 'Montserrat-Regular';
-        font-size: variables.pixeles-rem(30);
-        margin-bottom: 0;
-        color: $c-secun-1;
+    .cont_portada{
+        z-index: 1;
+        grid-column: 1/2;
+        grid-row: 1/2;  
+
+        .txt_descripcion {
+            font-family: 'Montserrat-Regular';
+            font-size: variables.pixeles-rem(30);
+            margin-bottom: 0;
+            color: $c-secun-1;
+        }
+
+        h1{
+            padding: 16rem 0rem 3rem 3rem;
+        }
+    
+        p{
+            padding: 0rem 0rem 3rem 3rem;
+        }
+
+        .btn_desk {
+            @include variables.crear-flexbox(center);
+            width: $tamanio * 14;
+            height:  $tamanio * 4.2;
+            border: 1px solid #fbeed9;
+            padding: $w-px * 2.1;
+            border-radius: $w-px * 4.0;
+            text-align: center;
+            flex-direction: row;
+            text-decoration: none;
+            margin-left: 3rem;
+        }
+
+        .text_Desk{
+            color: #fbeed9;
+            font-size: 18px;
+            font-family: 'Montserrat-Regular';
+            font-weight: bold; 
+        }
+        .img_descarga {
+            width: 1.25rem;
+            height: 1.25rem;
+            margin-left: 8px;
+        }
+    }
+}
+
+
+/* Pag Nosotros */
+
+.cont_gen_nos{
+    width: $ancho;
+    padding: 2.5rem 3%;
+    min-width: $w-px * 36;
+
+    h2{
+        font-family: 'Vollkorn-Regular';
+        font-size: 2.2rem;
+        text-align: center;
+        color: $c-primario-2;
+        margin-top: 5rem;
+    }
+
+    /* Aplicando Grid */
+    .cont_nosotros{
+        width: $ancho;
+        height: $alto;
+        padding: 1rem 22%;
+        /* Agregando grillas */
+        display: grid;
+        gap: 0;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas: "card_1 card_2";
+    
+        .card_nos{
+            height: 500px;
+            background-color: #f2f2f2;
+            box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+
+            p, span{
+                display: block;
+                padding-top: 10px;
+            }
+        }
+
+        .card_1{
+            background-image: url('/img/pres_1a.png');
+            background-size: $ancho;
+            background-repeat: no-repeat;
+            width: $ancho;
+            object-fit: cover;
+            grid-area: card_1;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            
+            p{
+                padding: 30px;
+                margin: 0 auto;
+            }
+            
+        }
+    
+        .card_2{
+            grid-area: card_2;
+
+            img{
+                background-size: cover;
+            }
+
+            .card_img1{
+                width: $ancho;
+                height: $alto;
+                object-fit: cover;
+            }
+        }
+    }
+}
+/* Fin de pag Nosotros */
+
+/* Fin de main */
+
+/* Pag Contactanos */
+
+.content_contactanos{
+    padding: 2rem 1.5rem 2rem 1.5rem;
+}
+
+#contactanos input,
+#contactanos textarea{
+    color: $c-primario-1;
+    background-color: $c-secun-1;
+    border: 1px solid $c-primario-2;
+    box-shadow: none;
+    font-weight: inherit;
+}
+
+textarea{
+    resize: none;
+}
+
+fieldset {
+    min-width: 0;
+    padding: 0;
+    margin: 0;
+    border: 1;
+  }
+
+/* Fin de pag Contactanos */
+
+/*  Footer */
+
+footer{
+    background-color: #262626;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+}
+
+.pie_pag {
+    width: 100vw;
+    padding: 4rem 3%;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    gap: 2%;
+    display: flex;
+
+    ul{
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding-left: 0;
+
+        .link_secc a{
+            display: flex;
+            cursor: pointer;
+            align-items: center;
+        }
     }
 
 }
 
-h1.pdd_bottom{
-    padding-bottom: $w-px * 3 + 6;
+/* Contenido 1 pie pag */
+
+.cont1_pie{
+    margin-bottom: 1rem;
+    width: 28%;
+    display: flex;
+    flex-direction: column;
+
+    .logo_footer {
+        position: relative;
+        width: 11.5rem;
+    }
+
+    .mg_btm_pie, h2{
+        margin-bottom: 2rem;
+    }
+    .link_secc a ,.text_gen_pie{
+        padding: 10px 0;
+        color: #F1BF7B;
+        font-size: 1rem;  
+    }
 }
+
+.cont2_pie{
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 58%;
+    gap: 2%;
+    display: flex;
+
+    #cont_pie_nosotros{
+        width: 17%;
+    }
+
+    .cont_pie_selec{
+        margin-bottom: 2rem;
+        width: 28%;
+
+        h2{
+            font-family: 'Vollkorn-Regular';
+            color: #F1BF7B;
+            font-size: 1.3rem;
+            font-weight: normal;
+          }
+    }
+
+    .link_secc a ,.text_gen_pie{
+        padding: 10px 0;
+        color: #F1BF7B;
+        font-size: 1rem;
+        text-decoration: none;  
+    }
+
+    .icn{
+        width: 32px;
+        height: 32px;
+        margin-right: 5px;
+        background-repeat: no-repeat;
+        flex: none;
+    }
+    .icn.bi_mail{
+        background-image: url('../img/mail.svg');
+    }
+    .icn.bi_wht{
+        background-image: url('../img/whatsapp.svg');
+    }
+    .icn.bi_fb{
+        background-image: url('../img/facebook.svg');
+    }
+    .icn.bi_ig{
+        background-image: url('../img/Instagram.svg');
+    }
+    
+}
+
