--- a/scss/partials/_queries.scss
+++ b/scss/partials/_queries.scss
@@ -1,3 +1,82 @@
+
+/* media Q menu mobile  */
+@media (max-width:1360px) and (min-width:360px){
+    .navegacion{
+        height: 5.375rem;
+        padding: 0 2rem 0 2.8rem;
+    }
+}
+
+@media (max-width:1266px) and (min-width:360px){
+    .class_logo{
+        width: 11.5625rem;
+        object-fit: cover;
+    }
+}
+
+@media (max-width:800px){
+    .nav__cont{
+        width: 70%;
+    }
+}
+
+@media (max-width:1360px){
+    .iconos_header,.nav__cont{
+        display: none;
+    }
+    .navegacion label{
+        display: block;
+        width: 3rem;
+        height: 3rem;
+        text-align: center;
+        padding: .5rem;
+
+    }
+    #check_menu:checked~.nav__cont{
+        display: flex;
+        background: #262626;
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        left: 0;
+        top: 96px;
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        padding: 2rem 3rem;
+    }
+}
+
+
+
+@media (max-width:1320px){
+    #img_principal{
+        height: 55rem;
+        background-size: cover;
+    }
+}
+
+@media (max-width:800px){ 
+    #txt_enunciado{
+        top: 444px;
+        left: 55px;
+        margin-right: 50px;
+    }
+    .txt_enun{
+        font-size: 2.5rem;
+    }
+    .txt_descripcion{
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width:1360px){
+    #img_principal{
+        background-position-x: center;
+        background-position-y: 0rem;
+    }
+}
+
 @media ( width < 1020px ) {
     .cont_nosotros {
         padding: 1rem 7rem;
@@ -19,5 +98,48 @@
     .cont_nosotros {
         padding: 1rem 3rem;
         font-size: 0.875rem;
+    }
+}
+
+@media (max-width:1660px){
+    .pie_pag{
+        padding: 4rem 4%;
+    }
+}
+
+@media (max-width:1320px){
+    .pie_pag{
+        padding: 4rem 8%;
+    }
+    .cont1_pie{
+        order: 2;
+        width: 100%;
+    }
+    .cont2_pie{
+        order: 1;
+        width: 100%;
+    }
+}
+
+@media (max-width:400px){
+    .pie_pag{
+        padding: 3rem 15%;
+    }
+}
+
+@media (max-width:768px) and (min-width:360px){
+    .cont1_pie{
+        width: 100%;
+        order: 2;
+        margin-top: 2rem;
+    }
+}
+
+@media (max-width:768px) and (min-width:360px){
+    .cont2_pie{
+        order: 1;
+    }
+    .cont2_pie, .cont2_pie #cont_pie_nosotros,.cont_pie_selec{
+        width: 100%;
     }
 }
